--- a/student-management-backend/src/main/resources/application.properties
+++ b/student-management-backend/src/main/resources/application.properties
@@ -1,12 +1,10 @@
-#spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.datasource.url=jdbc:postgresql://localhost:5432/student
-#spring.datasource.username=postgres
-#spring.datasource.password=postgres
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.properties.hibernate.show_sql=true
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+
 
 #Local Mongo-DB config
+
+
 spring.data.mongodb.database=std_db
 spring.data.mongodb.port=27017
 spring.data.mongodb.host=localhost
-#spring.main.allow-bean-definition-overriding=true
+spring.main.allow-bean-definition-overriding=true
